[package]
name = "denovo_kmer"
version = "0.1.0"
edition = "2021"
description = "De novo variant curation via k-mer analysis"

[[bin]]
name = "kmer-denovo"
path = "src/main.rs"

[dependencies]
rust-htslib = "0.49"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
rustc-hash = "2"
